# kitelms

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4709d85cb0c3_adding_billing_and_updating_enrollment.py  51894f49bdc8_adding_oauth_settings.py  5f2d75c4ceb4_adding_discussion.py  807436ce9832_adding_course_section_and_lessons.py  aa5b0afe64e0_init_db.py  b1f2e4f2dcd5_adding_app_settings.py  b607a13450aa_adding_timeline_posts_and_comments.py
backend/: main.py
backend/core/: settings.py
backend/models/: database.py  engine.py
backend/modules/auth/: auth_methods.py  auth_routes.py  auth_schema.py
backend/modules/courses/: course_methods.py  course_routes.py  course_schema.py
backend/modules/discussions/: discussion_methods.py  discussion_routes.py  discussion_schema.py
backend/modules/enrollments/: enrollment_methods.py  enrollment_routes.py  enrollment_schema.py
backend/modules/lessons/: lesson_methods.py  lesson_routes.py  lesson_schema.py
backend/modules/sections/: section_methods.py  section_routes.py  section_schema.py
backend/modules/timeline/: timeline_methods.py  timeline_routes.py  timeline_schema.py
backend/modules/users/: user_methods.py  user_routes.py  user_schema.py
backend/utils/: ids.py  models.py
frontend/: bun.lockb
frontend/src/app/: index.tsx  providers.tsx
tests/: conftest.py  test_auth.py  test_courses.py  test_discussions.py  test_enrollments.py  test_lessons.py  test_sections.py  test_timeline.py  test_users.py  test_utils.py
