[project]
name = "kitelms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt==4.0.1",
    "bson>=0.5.10",
    "fastapi[standard]>=0.116.1",
    "granian>=2.5.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.12.8",
    "scalar-fastapi>=1.2.3",
    "sqlmodel>=0.0.24",
]

[tool.ruff]
line-length = 120
lint.ignore = ["E712"]
lint.select = ["E", "F", "W", "I"]
exclude = [
    "alembic",
    "venv",
    "frontend"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
